<resources>
    <string name="app_name">ShiftApp</string>
    <string name="insert_email">Insert Email...</string>
    <string name="insert_password">Insert Password...</string>
    <string name="want_to_sign_up">want to sign up? click Signup!</string>
    <string name="insert_Repassword">Insert Repassword</string>
    <string name="insert_phone_number">Insert Phone Number</string>
    <string name="insert_full_name">Insert Full Name...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>